[FIX] web: make invalid field borders visible all the time
Not only on hover - otherwise it makes it very difficult for users
to find what field is missing content.

closes odoo/odoo#101349

X-original-commit: b674e81b7ca7e553f593cef1bc1a9f94cd58e3d3

--- a/addons/web/static/src/views/fields/fields.scss
+++ b/addons/web/static/src/views/fields/fields.scss
@@ -38,6 +38,10 @@
             }
         }
     }
+
+    &.o_field_invalid .o_input {
+        border-color: var(--o-input-border-color);
+    }
 }
 
 .o_kanban_quick_create .o_field_widget .o_input {
